rendered/12.1.0/ravendb.ravendb.md
# Community package requirements: repository management

(Note: This issue was filed in a semi-automated fashion on behalf of the Ansible Community Steering Committee. Let me know if you see errors in this issue.)


The contents in the `1.0.3` git tag do not match `ravendb-ravendb-1.0.3.tar.gz` as uploaded to Ansible Galaxy. For future releases, please make sure that the contents uploaded to Galaxy match the sources that were tagged as that release. See the [Repository management requirements][repo-mgmt] for more information.

Please see the errors below and address them. If these issues aren't addressed within a reasonable time period, the collection may be subject to [removal from Ansible][removal].

*Please fix the issues identified below and then create a new Galaxy release so the fixes are caught in the next round of automated testing.*

Thank you for your efforts and for being part of the Ansible package! We appreciate it.

---


## File divergences

The following files differ between the `1.0.3` git tag and `ravendb-ravendb-1.0.3.tar.gz` on Ansible Galaxy:

- `.github/workflows/tests_role_ravendb_node.yml` (`WRONG_HASH`)
- `.gitignore` (`WRONG_HASH`)
- `CHANGELOG.md` (`WRONG_HASH`)
- `changelogs/changelog.yml` (`WRONG_HASH`)
- `CODE_OF_CONDUCT.md` (`WRONG_HASH`)
- `LICENSE` (`WRONG_HASH`)
- `meta/runtime.yml` (`WRONG_HASH`)
- `playbooks/cleanup_ravendb.yml` (`WRONG_HASH`)
- `playbooks/databases/ravendb_create_database.yml` (`WRONG_HASH`)
- `playbooks/databases/ravendb_create_database_custom_settings.yml` (`WRONG_HASH`)
- `playbooks/databases/ravendb_delete_database.yml` (`WRONG_HASH`)
- `playbooks/databases/secured/ravendb_create_database_secured.yml` (`WRONG_HASH`)
- `playbooks/databases/secured/ravendb_create_encrypted_database_secured.yml` (`WRONG_HASH`)
- `playbooks/databases/secured/ravendb_delete_database_secured.yml` (`WRONG_HASH`)
- `playbooks/databases/secured_selfsigned/ravendb_create_database_secured_self_signed.yml` (`WRONG_HASH`)
- `playbooks/databases/secured_selfsigned/ravendb_delete_database_secured_self_signed.yml` (`WRONG_HASH`)
- `playbooks/indexes/ravendb_create_index.yml` (`WRONG_HASH`)
- `playbooks/indexes/ravendb_create_multimap_index.yml` (`WRONG_HASH`)
- `playbooks/indexes/ravendb_delete_index.yml` (`WRONG_HASH`)
- `playbooks/indexes/ravendb_disable_index.yml` (`WRONG_HASH`)
- `playbooks/indexes/ravendb_enable_index.yml` (`WRONG_HASH`)
- `playbooks/indexes/ravendb_pause_index.yml` (`WRONG_HASH`)
- `playbooks/indexes/ravendb_reset_index.yml` (`WRONG_HASH`)
- `playbooks/indexes/ravendb_resume_index.yml` (`WRONG_HASH`)
- `playbooks/indexes/ravendb_update_index.yml` (`WRONG_HASH`)
- `playbooks/indexes/secured/ravendb_create_index_secured.yml` (`WRONG_HASH`)
- `playbooks/indexes/secured/ravendb_delete_index_secured.yml` (`WRONG_HASH`)
- `playbooks/indexes/secured/ravendb_disable_index_secured.yml` (`WRONG_HASH`)
- `playbooks/indexes/secured/ravendb_enable_index_secured.yml` (`WRONG_HASH`)
- `playbooks/node/ravendb_add_nodes.yml` (`WRONG_HASH`)
- `playbooks/node/ravendb_add_nodes_secured.yml` (`WRONG_HASH`)
- `playbooks/setup_ravendb.yml` (`WRONG_HASH`)
- `playbooks/setup_ravendb_secured.yml` (`WRONG_HASH`)
- `playbooks/setup_ravendb_secured_self_signed.yml` (`WRONG_HASH`)
- `playbooks/update_ravendb.yml` (`WRONG_HASH`)
- `plugins/doc_fragments/ravendb.py` (`WRONG_HASH`)
- `plugins/modules/database.py` (`WRONG_HASH`)
- `plugins/modules/index.py` (`WRONG_HASH`)
- `plugins/modules/node.py` (`WRONG_HASH`)
- `plugins/module_utils/common_args.py` (`WRONG_HASH`)
- `plugins/README.md` (`WRONG_HASH`)
- `README.md` (`WRONG_HASH`)
- `requirements.txt` (`WRONG_HASH`)
- `roles/ravendb_node/.travis.yml` (`WRONG_HASH`)
- `roles/ravendb_node/.yamllint` (`WRONG_HASH`)
- `roles/ravendb_node/defaults/main.yml` (`WRONG_HASH`)
- `roles/ravendb_node/handlers/main.yml` (`WRONG_HASH`)
- `roles/ravendb_node/meta/argument_specs.yml` (`WRONG_HASH`)
- `roles/ravendb_node/meta/main.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/cleanup/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/cleanup/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/cleanup/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/cleanup-rhel/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/cleanup-rhel/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/cleanup-rhel/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rhel-custom-image/Dockerfile` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured-rhel/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured-rhel/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured-rhel/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured_self_signed/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured_self_signed/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured_self_signed/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/unsecured/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/unsecured/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/unsecured/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/unsecured-rhel/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/unsecured-rhel/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/unsecured-rhel/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/update/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/update/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/update/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/update-rhel/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/update-rhel/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/update-rhel/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/README.md` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/debian.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/install.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/main.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/ravendb_python_client_prerequisites_uninstall.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/ravendb_secure_self_sign_setup.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/ravendb_secure_setup.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/redhat.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/uninstall.yml` (`WRONG_HASH`)
- `roles/ravendb_node/templates/ravendb.service.j2` (`WRONG_HASH`)
- `roles/ravendb_node/templates/settings.default.json.j2` (`WRONG_HASH`)
- `roles/ravendb_node/templates/settings.default.json.j2.simple` (`WRONG_HASH`)
- `roles/ravendb_node/templates/settings.local_setup.json.j2` (`WRONG_HASH`)
- `roles/ravendb_node/tests/inventory` (`WRONG_HASH`)
- `roles/ravendb_node/tests/test.yml` (`WRONG_HASH`)
- `roles/ravendb_node/vars/main.yml` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/defaults/main.yml` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/handlers/main.yml` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/meta/main.yml` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/README.md` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/tasks/main.yml` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/tests/inventory` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/tests/test.yml` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/vars/main.yml` (`WRONG_HASH`)
- `tests/unit/test_cluster.py` (`WRONG_HASH`)
- `tests/unit/test_database.py` (`WRONG_HASH`)
- `tests/unit/test_index.py` (`WRONG_HASH`)
- `tests/unit/test_index_modes.py` (`WRONG_HASH`)


[ci-testing]: https://docs.ansible.com/ansible/latest/community/collection_contributors/collection_requirements.html#ci-testing
[repo-mgmt]: https://docs.ansible.com/ansible/latest/community/collection_contributors/collection_requirements.html#repository-management
[removal]: https://github.com/ansible-collections/overview/blob/main/removal_from_ansible.rst
