rendered/14.2.0/ravendb.ravendb.md
# Community package requirements: repository management

(Note: This issue was filed in a semi-automated fashion on behalf of the Ansible Community Steering Committee. Let me know if you see errors in this issue.)


The contents in the `1.0.4` git tag do not match `ravendb-ravendb-1.0.4.tar.gz` as uploaded to Ansible Galaxy. For future releases, please make sure that the contents uploaded to Galaxy match the sources that were tagged as that release. See the [Repository management requirements][repo-mgmt] for more information.

Please see the errors below and address them. If these issues aren't addressed within a reasonable time period, the collection may be subject to [removal from Ansible][removal].

*Please fix the issues identified below and then create a new Galaxy release so the fixes are caught in the next round of automated testing.*

Thank you for your efforts and for being part of the Ansible package! We appreciate it.

---


## File divergences

The following files differ between the `1.0.4` git tag and `ravendb-ravendb-1.0.4.tar.gz` on Ansible Galaxy:

- `.github/workflows/tests_role_ravendb_node.yml` (`WRONG_HASH`)
- `.gitignore` (`WRONG_HASH`)
- `CHANGELOG.md` (`WRONG_HASH`)
- `changelogs/changelog.yml` (`WRONG_HASH`)
- `CODE_OF_CONDUCT.md` (`WRONG_HASH`)
- `inventory.ini` (`WRONG_HASH`)
- `LICENSE` (`WRONG_HASH`)
- `meta/runtime.yml` (`WRONG_HASH`)
- `playbooks/cleanup_ravendb.yml` (`WRONG_HASH`)
- `playbooks/connection_string.yml` (`WRONG_HASH`)
- `playbooks/database.yml` (`WRONG_HASH`)
- `playbooks/healthcheck.yml` (`WRONG_HASH`)
- `playbooks/index.yml` (`WRONG_HASH`)
- `playbooks/node.yml` (`WRONG_HASH`)
- `playbooks/setup_ravendb.yml` (`WRONG_HASH`)
- `playbooks/setup_ravendb_secured.yml` (`WRONG_HASH`)
- `playbooks/setup_ravendb_secured_self_signed.yml` (`WRONG_HASH`)
- `plugins/doc_fragments/ravendb.py` (`WRONG_HASH`)
- `plugins/modules/connection_string.py` (`WRONG_HASH`)
- `plugins/modules/database.py` (`WRONG_HASH`)
- `plugins/modules/healthcheck.py` (`WRONG_HASH`)
- `plugins/modules/index.py` (`WRONG_HASH`)
- `plugins/modules/node.py` (`WRONG_HASH`)
- `plugins/module_utils/common_args.py` (`WRONG_HASH`)
- `plugins/module_utils/core/client.py` (`WRONG_HASH`)
- `plugins/module_utils/core/configuration.py` (`WRONG_HASH`)
- `plugins/module_utils/core/deps.py` (`WRONG_HASH`)
- `plugins/module_utils/core/files.py` (`WRONG_HASH`)
- `plugins/module_utils/core/messages.py` (`WRONG_HASH`)
- `plugins/module_utils/core/result.py` (`WRONG_HASH`)
- `plugins/module_utils/core/tls.py` (`WRONG_HASH`)
- `plugins/module_utils/core/validation.py` (`WRONG_HASH`)
- `plugins/module_utils/dto/connection_string.py` (`WRONG_HASH`)
- `plugins/module_utils/dto/database.py` (`WRONG_HASH`)
- `plugins/module_utils/dto/healthcheck.py` (`WRONG_HASH`)
- `plugins/module_utils/dto/index.py` (`WRONG_HASH`)
- `plugins/module_utils/dto/node.py` (`WRONG_HASH`)
- `plugins/module_utils/reconcilers/base.py` (`WRONG_HASH`)
- `plugins/module_utils/reconcilers/connection_string_reconciler.py` (`WRONG_HASH`)
- `plugins/module_utils/reconcilers/database_reconciler.py` (`WRONG_HASH`)
- `plugins/module_utils/reconcilers/healthcheck_reconciler.py` (`WRONG_HASH`)
- `plugins/module_utils/reconcilers/index_reconciler.py` (`WRONG_HASH`)
- `plugins/module_utils/reconcilers/node_reconciler.py` (`WRONG_HASH`)
- `plugins/module_utils/services/cluster_service.py` (`WRONG_HASH`)
- `plugins/module_utils/services/connection_string_service.py` (`WRONG_HASH`)
- `plugins/module_utils/services/database_service.py` (`WRONG_HASH`)
- `plugins/module_utils/services/db_settings_service.py` (`WRONG_HASH`)
- `plugins/module_utils/services/encryption_service.py` (`WRONG_HASH`)
- `plugins/module_utils/services/healthcheck_service.py` (`WRONG_HASH`)
- `plugins/module_utils/services/index_config_service.py` (`WRONG_HASH`)
- `plugins/module_utils/services/index_service.py` (`WRONG_HASH`)
- `plugins/module_utils/services/node_service.py` (`WRONG_HASH`)
- `plugins/module_utils/services/retry_service.py` (`WRONG_HASH`)
- `plugins/README.md` (`WRONG_HASH`)
- `README.md` (`WRONG_HASH`)
- `requirements.txt` (`WRONG_HASH`)
- `roles/ravendb_node/.travis.yml` (`WRONG_HASH`)
- `roles/ravendb_node/.yamllint` (`WRONG_HASH`)
- `roles/ravendb_node/defaults/main.yml` (`WRONG_HASH`)
- `roles/ravendb_node/handlers/main.yml` (`WRONG_HASH`)
- `roles/ravendb_node/meta/argument_specs.yml` (`WRONG_HASH`)
- `roles/ravendb_node/meta/main.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/cleanup/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/cleanup/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/cleanup/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/cleanup-rhel/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/cleanup-rhel/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/cleanup-rhel/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/debian-11/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/debian-11/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/debian-11/prepare.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/debian-11/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/debian-12/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/debian-12/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/debian-12/prepare.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/debian-12/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/debian-13/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/debian-13/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/debian-13/prepare.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/debian-13/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/cs/10_raven.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/cs/20_sql.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/cs/30_olap.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/cs/40_es.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/cs/50_queues.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/cs/60_sf.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/cs/70_ai.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/cs.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/db/10_create.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/db/20_settings.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/db/30_delete.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/db.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/index/10_create.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/index/20_update.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/index/30_config_and_edges.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/index/40_modes_and_reset.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/index/50_delete.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/index.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/tasks/init.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured-nodes/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured-nodes/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured-nodes/tasks/db_affinity.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured-nodes/tasks/init.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured-nodes/tasks/node.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/plugins-unsecured-nodes/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rhel-custom-image/Dockerfile` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rolling-update/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rolling-update/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rolling-update/tasks/failure-paths/cluster-connectivity-fails-on-b.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rolling-update/tasks/failure-paths/db-online-fail-fast-on-load-error.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rolling-update/tasks/failure-paths/degraded-db-placement-on-a-c.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rolling-update/tasks/failure-paths/node-alive-fails-on-b.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rolling-update/tasks/happy-paths/db-online-ignores-disabled-dbs.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rolling-update/tasks/happy-paths/db-online-timeout-continue-soft-pass.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rolling-update/tasks/happy-paths/node-and-cluster-ok.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rolling-update/tasks/happy-paths/node-cluster-and-db-online-ok.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rolling-update/tasks/happy-paths/node-ok.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/rolling-update/tasks/init.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured-rhel/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured-rhel/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured-rhel/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured_self_signed/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured_self_signed/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/secured_self_signed/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/unsecured/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/unsecured/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/unsecured/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/unsecured-rhel/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/unsecured-rhel/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/unsecured-rhel/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/update/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/update/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/update/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/update-rhel/converge.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/update-rhel/molecule.yml` (`WRONG_HASH`)
- `roles/ravendb_node/molecule/update-rhel/verify.yml` (`WRONG_HASH`)
- `roles/ravendb_node/README.md` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/debian.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/download_tarball.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/install.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/main.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/ravendb_python_client_prerequisites_uninstall.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/ravendb_secure_self_sign_setup.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/ravendb_secure_setup.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/redhat.yml` (`WRONG_HASH`)
- `roles/ravendb_node/tasks/uninstall.yml` (`WRONG_HASH`)
- `roles/ravendb_node/templates/ravendb.service.j2` (`WRONG_HASH`)
- `roles/ravendb_node/templates/settings.default.json.j2` (`WRONG_HASH`)
- `roles/ravendb_node/templates/settings.default.json.j2.simple` (`WRONG_HASH`)
- `roles/ravendb_node/templates/settings.local_setup.json.j2` (`WRONG_HASH`)
- `roles/ravendb_node/tests/inventory` (`WRONG_HASH`)
- `roles/ravendb_node/tests/test.yml` (`WRONG_HASH`)
- `roles/ravendb_node/vars/main.yml` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/defaults/main.yml` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/handlers/main.yml` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/meta/main.yml` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/README.md` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/tasks/main.yml` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/tests/inventory` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/tests/test.yml` (`WRONG_HASH`)
- `roles/ravendb_python_client_prerequisites/vars/main.yml` (`WRONG_HASH`)
- `tests/unit/test_cluster.py` (`WRONG_HASH`)
- `tests/unit/test_database.py` (`WRONG_HASH`)
- `tests/unit/test_index.py` (`WRONG_HASH`)
- `tests/unit/test_index_modes.py` (`WRONG_HASH`)


[ci-testing]: https://docs.ansible.com/ansible/latest/community/collection_contributors/collection_requirements.html#ci-testing
[repo-mgmt]: https://docs.ansible.com/ansible/latest/community/collection_contributors/collection_requirements.html#repository-management
[removal]: https://github.com/ansible-collections/overview/blob/main/removal_from_ansible.rst
